--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Unity WebGL Player | mungmung</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "Build/mungmung.json");
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/mungmung.json");
+      
     </script>
   </head>
   <body>
     <div id="unityContainer" style="width: 960px; height: 600px; margin: auto"></div>
+    <button onclick="unityInstance.SendMessage('GameManager', 'SetDogIndex', 2)">test</button>
   </body>
 </html>
